// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component renders correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2F3945",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 16,
      },
      Object {},
      undefined,
    ]
  }
/>
`;

exports[`Text component renders correctly children 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2F3945",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 16,
      },
      Object {},
      undefined,
    ]
  }
>
  renders correctly children
</Text>
`;

exports[`Text component renders correctly children with useI18n 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2F3945",
        "fontFamily": "OpenSans-Regular",
        "fontSize": 16,
      },
      Object {},
      undefined,
    ]
  }
/>
`;

exports[`Text component renders correctly variant 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2F3945",
        "fontFamily": "OpenSans-SemiBold",
        "fontSize": 16,
      },
      Object {},
      undefined,
    ]
  }
  testID="text.h5"
>
  renders correctly children
</Text>
`;

exports[`Text component renders correctly variant H1 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2F3945",
        "fontFamily": "OpenSans-SemiBold",
        "fontSize": 36,
      },
      Object {},
      undefined,
    ]
  }
  testID="text.h1"
>
  renders correctly children
</Text>
`;

exports[`Text component renders correctly variant H2 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2F3945",
        "fontFamily": "OpenSans-SemiBold",
        "fontSize": 28,
      },
      Object {},
      undefined,
    ]
  }
  testID="text.h2"
>
  renders correctly children
</Text>
`;

exports[`Text component renders correctly variant H3 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2F3945",
        "fontFamily": "OpenSans-SemiBold",
        "fontSize": 24,
      },
      Object {},
      undefined,
    ]
  }
  testID="text.h3"
>
  renders correctly children
</Text>
`;

exports[`Text component renders correctly variant H4 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2F3945",
        "fontFamily": "OpenSans-SemiBold",
        "fontSize": 20,
      },
      Object {},
      undefined,
    ]
  }
  testID="text.h4"
>
  renders correctly children
</Text>
`;

exports[`Text component renders correctly variant H5 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2F3945",
        "fontFamily": "OpenSans-SemiBold",
        "fontSize": 16,
      },
      Object {},
      undefined,
    ]
  }
  testID="text.h5"
>
  renders correctly children
</Text>
`;

exports[`Text component renders correctly variant H6 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2F3945",
        "fontFamily": "OpenSans-SemiBold",
        "fontSize": 14,
      },
      Object {},
      undefined,
    ]
  }
  testID="text.h6"
>
  renders correctly children
</Text>
`;

exports[`Text component renders correctly variant H6s 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#2F3945",
        "fontFamily": "OpenSans-SemiBold",
        "fontSize": 14,
      },
      Object {},
      undefined,
    ]
  }
  testID="text.h6s"
>
  renders correctly children
</Text>
`;
